# storage-manager-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_add_items_table.py  002_dental_saas_schema.py  003_inventory_item_status.py  004_business_type_modules.py
src/: main.py
src/app/: routes.py
src/app/appointments/: model.py  repository.py  router.py  schema.py  service.py
src/app/auth/: router.py  schema.py  service.py
src/app/billing/: model.py  repository.py  router.py  schema.py  service.py
src/app/catalog/: presets.py  router.py  schema.py  service.py
src/app/clinics/: model.py  repository.py  router.py  schema.py  service.py
src/app/dental_chart/: model.py  repository.py  router.py  schema.py  service.py
src/app/documents/: activity.py  model.py  repository.py  router.py  schema.py  service.py
src/app/inventory/: model.py  repository.py  router.py  schema.py  service.py
src/app/items/: model.py  repository.py  router.py  schema.py  service.py
src/app/notifications/: repository.py  router.py  schema.py  service.py
src/app/organizations/: model.py  repository.py  router.py  schema.py  service.py
src/app/patients/: model.py  repository.py  router.py  schema.py  service.py
src/app/reports/: repository.py  router.py  (+2 more)
src/core/: business_modules.py  config.py  exceptions.py  logging.py
src/scripts/: seed.py
tests/: conftest.py  test_business_modules.py  test_health.py
(+23 files in other folders)
